tests/parser/var_err5.expected
Syntax Error: line 4:
Unexpected token (TOK_SEMICOLON, ';'), likely missing a(n)  
  'TOK_KEY_ARRAY' or
  'TOK_KEY_INTEGER' or
Possibly due to malformed or missing:
  Non-terminal: 'Variable' or
  Non-terminal: 'Type'
