tests/parser/var_err5.mtp
(* variable section start *)

(* missing variable type*)
var test : ;

begin

end
.